# vittalize_c-

./: .gitignore  CMakeLists.txt  README.md
data/: vittalize.sqlite
src/: vittalize_server.cpp
web/: index.html  script.js  style.css
